--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!--
 body {
 	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
-	background-color: #42413C;
+	background-color: #2BA045;
 	margin: 0;
 	padding: 0;
 	color: #000;
@@ -22,6 +22,7 @@ h1, h2, h3, h4, h5, h6, p {
 	margin-top: 0;	 /* 删除上边距可以解决边距会超出其包含的 div 的问题。剩余的下边距可以使 div 与后面的任何元素保持一定距离。 */
 	padding-right: 15px;
 	padding-left: 15px; /* 向 div 内的元素侧边（而不是 div 自身）添加填充可避免使用任何方框模型数学。此外，也可将具有侧边填充的嵌套 div 用作替代方法。 */
+	text-align: center;
 }
 a img { /* 此选择器将删除某些浏览器中显示在图像周围的默认蓝色边框（当该图像包含在链接中时） */
 	border: none;
@@ -71,8 +72,13 @@ a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠
 	font-size: 1px;
 	line-height: 0px;
 }
+.加粗 {
+	font-weight: bold;
+}
 -->
-</style></head>
+</style>
+<link href="text.css" rel="stylesheet" type="text/css" />
+</head>
 
 <body>
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -87,11 +93,15 @@ a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠
 
 <div class="container">
   <div class="content">
-    <h1>说明</h1>
+    <h1>欢迎您的光临！</h1>
     <p>请注意，最新价格以本站发布为准！数码产品价格浮动，以下单时间结算，涨价不谢，跌价别怪哟!</p>
     <h2>微信关注我们吧！</h2>
     <p><img src="aq5ysm/aq5ysm.png" alt="安庆五月数码微信公众号" width="903" height="257" longdesc="http://www.anqing.de" /></p>
-    <!-- end .content --></div>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <hr />
+    <p>©2019 <span class="蓝色加粗">安庆五月数码</span> <span class="加粗">地址</span>：安庆市迎江区龙山路116号 电话：<span class="加粗">0556-5554888</span> <a href="https://mpkf.weixin.qq.com/" target="_blank">在线客服登录</a><!-- end .content --></p>
+  </div>
   <!-- end .container --></div>
 </body>
 </html>
