--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠
     <h1>欢迎您的光临！</h1>
     <p>请注意，最新价格以本站发布为准！数码产品价格浮动，以下单时间结算，涨价不谢，跌价别怪哟!</p>
     <h2>微信关注我们吧！</h2>
-    <p><img src="aq5ysm/aq5ysm.png" alt="安庆五月数码微信公众号" width="903" height="257" longdesc="http://www.anqing.de" /></p>
+    <p><a href="https://weidian.com/?userid=1686521632"><img src="aq5ysm/aq5ysm.png" alt="安庆五月数码微信公众号" width="903" height="257" longdesc="http://www.anqing.de" /></a></p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <hr />
