增加微信会员卡指导

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>安庆五月数码3月30日全新上线!</title>
+<title>安庆五月数码全新上线!全城最低手机价格，最优手机质量！</title>
 <style type="text/css">
 <!--
 body {
@@ -93,12 +93,13 @@ a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠
 
 <div class="container">
   <div class="content">
+    <h1>&nbsp;</h1>
     <h1>欢迎您的光临！</h1>
     <p>请注意，最新价格以本站发布为准！数码产品价格浮动，以下单时间结算，涨价不谢，跌价别怪哟!</p>
-    <h2>微信关注我们吧！</h2>
     <p><a href="https://weidian.com/?userid=1686521632"><img src="aq5ysm/aq5ysm.png" alt="安庆五月数码微信公众号" width="903" height="257" longdesc="http://www.anqing.de" /></a></p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
+    <p>关注我们的官方微信，领取会员卡，到店即享会员价！直减100~1000!    </p>
+    <p><a href="https://mp.weixin.qq.com/s?__biz=MzIxOTY4Njc2OQ==&amp;mid=2247483715&amp;idx=1&amp;sn=2cb0a3c21cb1956e90d6ae89eee9ffec&amp;chksm=97d6335da0a1ba4bdfe8ca729c8427f87922823dbd914f590b5f39500147b618a14c4ecf42c9&amp;token=1594541046&amp;lang=zh_CN#rd"><img src="aq5ysm/领取会员卡.png" width="800" height="385" alt="领取安庆五月数码会员卡" /></a></p>
+    <p><img src="aq5ysm/快速买单.png" width="800" height="407" alt="安庆五月数码会员卡买单" /></p>
     <hr />
     <p>©2019 <span class="蓝色加粗"><a href="https://pan.wps.cn/l/s5tau2g" target="_blank">安庆五月数码</a></span> <span class="加粗">地址</span>：安庆市迎江区龙山路116号 电话：<span class="加粗">0556-5554888</span> <a href="https://mpkf.weixin.qq.com/" target="_blank">在线客服登录</a><!-- end .content --> <a href="http://111.39.38.46:8089/4-软件安装包/苹果手机/wukonghelper_anqing.exe">苹果手机维护</a></p>
   </div>
