--- a/weibo.html
+++ b/weibo.html
@@ -18,7 +18,7 @@
 </script>
 <iframe width="100%" height="500"  frameborder="0" scrolling="no" src="https://widget.weibo.com/livestream/listlive.php?language=zh_cn&width=0&height=500&uid=1412711073&skin=1&refer=1&appkey=3267464552&pic=0&titlebar=1&border=1&publish=1&atalk=1&recomm=0&at=0&atopic=%E4%BA%94%E6%9C%88%E6%95%B0%E7%A0%81&ptopic=%E4%BA%94%E6%9C%88%E6%95%B0%E7%A0%81&dpc=1"></iframe>
 
-<iframe src="http://music.163.com/outchain/player?type=0&amp;id=2753070927&amp;auto=0&amp;height=430" width="100%" height="450" frameborder="no" marginwidth="0" marginheight="0"></iframe> 
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=580 height=450 src="//music.163.com/outchain/player?type=0&id=2753070927&auto=1&height=430"></iframe>
 
 
 </body>
