--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <script>(function(i,s,o,g,r,a,m){i["DaoVoiceObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;a.charset="utf-8";m.parentNode.insertBefore(a,m)})(window,document,"script",('https:' == document.location.protocol ? 'https:' : 'http:') + "//widget.daovoice.io/widget/0b42e50c.js","daovoice")</script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>安庆五月数码全新上线!全城最低手机价格，最优手机质量！</title>
 <style type="text/css">
@@ -104,5 +105,21 @@ a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠
     <p>©2019 <span class="蓝色加粗"><a href="https://pan.wps.cn/l/s5tau2g" target="_blank">安庆五月数码</a></span> <span class="加粗">地址</span>：安庆市迎江区龙山路116号 电话：<span class="加粗">0556-5554888</span> <a href="https://mpkf.weixin.qq.com/" target="_blank">在线客服登录</a><!-- end .content --> <a href="http://111.39.38.46:8089/4-软件安装包/苹果手机/wukonghelper_anqing.exe">苹果手机维护</a></p>
   </div>
   <!-- end .container --></div>
+  
+  <script>(function(i,s,o,g,r,a,m){i["DaoVoiceObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;a.charset="utf-8";m.parentNode.insertBefore(a,m)})(window,document,"script",('https:' == document.location.protocol ? 'https:' : 'http:') + "//widget.daovoice.io/widget/APP_ID.js","daovoice");</script>
+<script>
+daovoice('init', {
+  app_id: "0b42e50c",
+  user_id: "NO_201905", // 必填: 该用户在您系统上的唯一ID
+  email: "5@anqing.de", // 选填:  该用户在您系统上的主邮箱
+  name: "五月数码", // 选填: 用户名
+  signed_up: 2019821660 // 选填: 用户的注册时间，用Unix时间戳表示
+});
+daovoice('update');
+daovoice('init', {
+  app_id: "0b42e50c"
+});
+daovoice('update');
+</script>
 </body>
 </html>
