--- a/index.html
+++ b/index.html
@@ -1,88 +1,211 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <script>(function(i,s,o,g,r,a,m){i["DaoVoiceObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;a.charset="utf-8";m.parentNode.insertBefore(a,m)})(window,document,"script",('https:' == document.location.protocol ? 'https:' : 'http:') + "//widget.daovoice.io/widget/0b42e50c.js","daovoice")</script>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>安庆五月数码全新上线!全城最低手机价格，最优手机质量！</title>
-<style type="text/css">
-<!--
-body {
-	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
-	background-color: #2BA045;
-	margin: 0;
-	padding: 0;
-	color: #000;
-}
-
-/* ~~ 元素/标签选择器 ~~ */
-ul, ol, dl { /* 由于浏览器之间的差异，最佳做法是在列表中将填充和边距都设置为零。为了保持一致，您可以在此处指定需要的数值，也可以在列表所包含的列表项（LI、DT 和 DD）中指定需要的数值。请注意，除非编写一个更为具体的选择器，否则您在此处进行的设置将会层叠到 .nav 列表。 */
-	padding: 0;
-	margin: 0;
-}
-h1, h2, h3, h4, h5, h6, p {
-	margin-top: 0;	 /* 删除上边距可以解决边距会超出其包含的 div 的问题。剩余的下边距可以使 div 与后面的任何元素保持一定距离。 */
-	padding-right: 15px;
-	padding-left: 15px; /* 向 div 内的元素侧边（而不是 div 自身）添加填充可避免使用任何方框模型数学。此外，也可将具有侧边填充的嵌套 div 用作替代方法。 */
-	text-align: center;
-}
-a img { /* 此选择器将删除某些浏览器中显示在图像周围的默认蓝色边框（当该图像包含在链接中时） */
-	border: none;
-}
-/* ~~ 站点链接的样式必须保持此顺序，包括用于创建悬停效果的选择器组在内。 ~~ */
-a:link {
-	color: #42413C;
-	text-decoration: underline; /* 除非将链接设置成极为独特的外观样式，否则最好提供下划线，以便可从视觉上快速识别 */
-}
-a:visited {
-	color: #6E6C64;
-	text-decoration: underline;
-}
-a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠标使用者相同的悬停体验。 */
-	text-decoration: none;
-}
-
-/* ~~ 此固定宽度容器包含所有其它元素 ~~ */
-.container {
-	width: 960px;
-	background-color: #FFF;
-	margin: 0 auto; /* 侧边的自动值与宽度结合使用，可以将布局居中对齐 */
-}
-
-/* ~~ 这是布局信息。 ~~ 
-
-1) 填充只会放置于 div 的顶部和/或底部。此 div 中的元素侧边会有填充。这样，您可以避免使用任何“方框模型数学”。请注意，如果向 div 自身添加任何侧边填充或边框，这些侧边填充或边框将与您定义的宽度相加，得出 *总计* 宽度。您也可以选择删除 div 中的元素的填充，并在该元素中另外放置一个没有任何宽度但具有设计所需填充的 div。
-
-*/
-.content {
-
-	padding: 10px 0;
-}
-
-/* ~~ 其它浮动/清除类 ~~ */
-.fltrt {  /* 此类可用于在页面中使元素向右浮动。浮动元素必须位于其在页面上的相邻元素之前。 */
-	float: right;
-	margin-left: 8px;
-}
-.fltlft { /* 此类可用于在页面中使元素向左浮动。浮动元素必须位于其在页面上的相邻元素之前。 */
-	float: left;
-	margin-right: 8px;
-}
-.clearfloat { /* 如果从 .container 中删除了 overflow:hidden，则可以将此类放置在 <br /> 或空 div 中，作为 #container 内最后一个浮动 div 之后的最终元素 */
-	clear:both;
-	height:0;
-	font-size: 1px;
-	line-height: 0px;
-}
-.加粗 {
-	font-weight: bold;
-}
--->
-</style>
-<link href="text.css" rel="stylesheet" type="text/css" />
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<title>Welcome to AnQing Business</title>
+<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<table width="900" border="0" align="center" cellpadding="0" cellspacing="0">
+  <tr>
+    <td align="left" valign="top" class="whiteBg"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+      <tr>
+        <td align="left" valign="top" class="bannerBg"><table width="870" border="0" align="right" cellpadding="0" cellspacing="0">
+          <tr>
+            <td width="206" align="left" valign="top" class="logoBotmbg"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+              <tr>
+                <td align="left" valign="top" class="logoTopbg">&nbsp;</td>
+              </tr>
+              <tr>
+                <td align="center" valign="top"><a href="index.html"><img src="images/logo.jpg" alt="Business" title="Business" width="169" height="111" border="0" /></a></td>
+              </tr>
+            </table></td>
+            <td align="left" valign="top"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+              <tr>
+                <td align="left" valign="top">
+					<ul class="topMenu">
+						<li><a href="index.html" title="Home" class="active">Home</a></li>
+						<li><a href="#" title="About Us">About Us</a></li>
+						<li><a href="#" title="Service">Service</a></li>
+						<li><a href="#" title="News">News</a></li>
+						<li><a href="weibo.html" title="Contact Us" class="last">Contact Us</a></li>
+					</ul>
+				</td>
+              </tr>
+              <tr>
+                <td align="left" valign="top" class="banner"><h2>Donec egetest egetmetus hendrerit consect</h2></td>
+              </tr>
+            </table></td>
+          </tr>
+        </table></td>
+      </tr>
+      <tr>
+        <td align="left" valign="top" class="paddingTop30"><table width="842" border="0" align="center" cellpadding="0" cellspacing="0">
+          <tr>
+            <td width="208" align="left" valign="top" class="leftPanlbotm"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+              <tr>
+                <td align="left" valign="top" class="leftPanltop"></td>
+              </tr>
+              <tr>
+                <td align="left" valign="top"><table width="185" border="0" align="center" cellpadding="0" cellspacing="0">
+                  <tr>
+                    <td align="left" valign="top"><h2 class="headingTxt">News &amp; Events</h2></td>
+                  </tr>
+                  <tr>
+                    <td align="left" valign="top" class="dottedLine">&nbsp;</td>
+                  </tr>
+                  <tr>
+                    <td align="left" valign="top">
+						<p class="padBotm8">Lorem ipsum dolor sit ameteriop consectetuer adipiscined gravida augue idmagna.</p>					</td>
+                  </tr>
+                  <tr>
+                    <td align="left" valign="top"><img src="images/news-pic.jpg" alt="" width="184" height="94" /></td>
+                  </tr>
+                  <tr>
+                    <td align="left" valign="top">
+						<ul class="newsList">
+							<li><a href="#">Snlacinia mauriset</a></li>
+							<li><a href="#">Donec egetest eget</a></li>
+							<li><a href="#">metus hendrerit</a></li>
+							<li><a href="#">Nullam at sapien sed</a></li>
+							<li><a href="#">Proin vitae risusat</a></li>
+						</ul>
+						<a href="#" class="moreTxt" title="More">More...</a>						</td>
+                  </tr>
+                  <tr>
+                    <td align="left" valign="top" class="padTop20"><h2 class="headingTxt">Featured Solution</h2></td>
+                  </tr>
+                  <tr>
+                    <td align="left" valign="top" class="dottedLine">&nbsp;</td>
+                  </tr>
+                  <tr>
+                    <td align="left" valign="top"><img src="images/solution-pic.jpg" alt="Solution" title="Solution" width="184" height="56" /></td>
+                  </tr>
+                  <tr>
+                    <td align="left" valign="top">
+						<p class="padTop10">Morbi at mauris. Viu loream loriea
+nislesiop  sagittis euvehicula viita
+elobortis griavida, dolor. Aliquaiim mauris dudictuma.</p>
+						<a href="#" class="more" title="Read More">Read More</a>
+					</td>
+                  </tr>
+                </table></td>
+              </tr>
+            </table></td>
+            <td width="26" align="left" valign="top">&nbsp;</td>
+            <td align="left" valign="top"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+              <tr>
+                <td align="left" valign="top" class="topleft">&nbsp;</td>
+                <td align="left" valign="top" class="topBar">&nbsp;</td>
+                <td align="left" valign="top" class="topRight">&nbsp;</td>
+              </tr>
+              <tr>
+                <td align="left" valign="top" class="leftBar">&nbsp;</td>
+                <td align="left" valign="top"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <td align="left" valign="top"><h2 class="welcomeTxt">Welcome!<br />
+<span>Integer tincidunt nibhquis loremivamus etdolor in nulla sollicitudin vulpuendisse ut nullae</span></h2></td>
+                  </tr>
+                  <tr>
+                    <td align="left" valign="top" class="dottedLine">&nbsp;</td>
+                  </tr>
+                  <tr>
+                    <td align="left" valign="top">
+						<p>Nunc vulputate accumsan metus. Mauris eu neque eu ligula aliquet ultrices. Morbi at mauris. Viu loream
+ nislesiop  sagittis eu, vehicula vitae, lobortis gravida, dolor. Aliquam mauris dui, dictum a, aliquam eues
+ieoptudin sed, lacus. Proin eratullam ac arcuhasellueds euismod elit acodio.</p>
+						<a href="#" class="more" title="Read More">Read More</a>					</td>
+                  </tr>
+                  <tr>
+                    <td align="left" valign="top" class="padTop30"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+                      <tr>
+                        <td width="194" align="left" valign="top"><table width="176" border="0" cellspacing="0" cellpadding="0">
+                          <tr>
+                            <td align="left" valign="top" class="featureTopcrv"></td>
+                          </tr>
+                          <tr>
+                            <td align="left" valign="top" class="featureMid">
+								<img src="images/feature-pic-1.jpg" alt="Feature-1" title="Feature-1" width="153" height="96" />
+								<p class="imgCaption padBotm8">Proin eratullam acarcuha</p>
+								<p class="padBotm8">Morbi at maurisivamu oesre aimnislesiop sagittise vehic ulavitae lobortis.</p>
+								<a href="#" class="readMore" title="Read More">Read More</a>							</td>
+                          </tr>
+                          <tr>
+                            <td align="left" valign="top" class="featurebotmcrv"></td>
+                          </tr>
+                        </table></td>
+                        <td width="194" align="left" valign="top"><table width="176" border="0" cellspacing="0" cellpadding="0">
+                          <tr>
+                            <td align="left" valign="top" class="featureTopcrv"></td>
+                          </tr>
+                          <tr>
+                            <td align="left" valign="top" class="featureMid"><img src="images/feature-pic-2.jpg" alt="Feature-2" title="Feature-2" width="153" height="96" />
+                                <p class="imgCaption padBotm8">Proin eratullam acarcuha</p>
+                              <p class="padBotm8">Morbi at maurisivamu oesre aimnislesiop sagittise vehic ulavitae lobortis.</p>
+                              <a href="#" class="readMore" title="Read More">Read More</a> </td>
+                          </tr>
+                          <tr>
+                            <td align="left" valign="top" class="featurebotmcrv"></td>
+                          </tr>
+                        </table></td>
+                        <td align="left" valign="top"><table width="176" border="0" cellspacing="0" cellpadding="0">
+                          <tr>
+                            <td align="left" valign="top" class="featureTopcrv"></td>
+                          </tr>
+                          <tr>
+                            <td align="left" valign="top" class="featureMid"><img src="images/feature-pic-3.jpg" alt="Feature-3" title="Feature-3" width="153" height="96" />
+                                <p class="imgCaption padBotm8">Proin eratullam acarcuha</p>
+                              <p class="padBotm8">Morbi at maurisivamu oesre aimnislesiop sagittise vehic ulavitae lobortis.</p>
+                              <a href="#" class="readMore" title="Read More">Read More</a> </td>
+                          </tr>
+                          <tr>
+                            <td align="left" valign="top" class="featurebotmcrv"></td>
+                          </tr>
+                        </table></td>
+                      </tr>
+                    </table></td>
+                  </tr>
+                  <tr>
+                    <td align="left" valign="top" class="padTop30"><a href="#"><img src="images/business-plan.jpg" alt="Best Business Plan Here" width="566" height="93" border="0" title="Best Business Plan Here" /></a></td>
+                  </tr>
+                </table></td>
+                <td align="left" valign="top" class="rightBar">&nbsp;</td>
+              </tr>
+              <tr>
+                <td align="left" valign="top" class="botmleft">&nbsp;</td>
+                <td align="left" valign="top" class="botmBar">&nbsp;</td>
+                <td align="left" valign="top" class="botmRight">&nbsp;</td>
+              </tr>
+            </table></td>
+          </tr>
+        </table></td>
+      </tr>
+    </table>
+    <div class="clear"id="divBottom" style="padding:0 0 10px 0">Design By :<a href="http://www.dreamweaver-templates.org/" target="_blank">Dreamweaver-Templates.org</a></div></td>
+  </tr>
+  <tr>
+    <td align="left" valign="top" class="footerBg">
+		<table width="100%" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td align="left" valign="top">
+		<ul class="footerLink">
+				<li class="noDivider"><a href="index.html" title="Home">Home</a></li>
+				<li><a href="#" title="About Us">About Us</a></li>
+				<li><a href="#" title="Service">Service</a></li>
+				<li><a href="#" title="News">News</a></li>
+				<li><a href="weibo.html" title="Contact Us" class="last">Contact Us</a></li>
+			</ul>
+			<p class="copy">&copy; Copyright Information Goes Here. All Rights Reserved.</p>
+			<p class="dsign">&nbsp;</p>
+	</td>
+  </tr>
+</table>
+	
+	</td>
+  </tr>
+</table>
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99822-6"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -90,36 +213,6 @@ a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠
   gtag('js', new Date());
 
   gtag('config', 'UA-99822-6');
-</script>
-
-<div class="container">
-  <div class="content">
-    <h1>&nbsp;</h1>
-    <h1>欢迎您的光临！</h1>
-    <p>请注意，最新价格以本站发布为准！数码产品价格浮动，以下单时间结算，涨价不谢，跌价别怪哟!</p>
-    <p><a href="https://weidian.com/?userid=1686521632"><img src="aq5ysm/aq5ysm.png" alt="安庆五月数码微信公众号" width="903" height="257" longdesc="http://www.anqing.de" /></a></p>
-    <p>关注我们的官方微信，领取会员卡，到店即享会员价！直减100~1000!    </p>
-    <p><a href="https://mp.weixin.qq.com/s?__biz=MzIxOTY4Njc2OQ==&amp;mid=2247483715&amp;idx=1&amp;sn=2cb0a3c21cb1956e90d6ae89eee9ffec&amp;chksm=97d6335da0a1ba4bdfe8ca729c8427f87922823dbd914f590b5f39500147b618a14c4ecf42c9&amp;token=1594541046&amp;lang=zh_CN#rd"><img src="aq5ysm/领取会员卡.png" width="800" height="385" alt="领取安庆五月数码会员卡" /></a></p>
-    <p><img src="aq5ysm/快速买单.png" width="800" height="407" alt="安庆五月数码会员卡买单" /></p>
-    <hr />
-    <p>©2019 <span class="蓝色加粗"><a href="https://pan.wps.cn/l/s5tau2g" target="_blank">安庆五月数码</a></span> <span class="加粗">地址</span>：安庆市迎江区龙山路116号 电话：<span class="加粗"><a href="weibo.html" target="_blank">0556-5554888</a></span> <a href="https://mpkf.weixin.qq.com/" target="_blank">在线客服登录</a><!-- end .content --> <a href="http://111.39.38.46:8089/4-软件安装包/苹果手机/wukonghelper_anqing.exe">苹果手机维护</a></p>
-  </div>
-  <!-- end .container --></div>
-  
-  <script>(function(i,s,o,g,r,a,m){i["DaoVoiceObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;a.charset="utf-8";m.parentNode.insertBefore(a,m)})(window,document,"script",('https:' == document.location.protocol ? 'https:' : 'http:') + "//widget.daovoice.io/widget/APP_ID.js","daovoice");</script>
-<script>
-daovoice('init', {
-  app_id: "0b42e50c",
-  user_id: "NO_201905", // 必填: 该用户在您系统上的唯一ID
-  email: "5@anqing.de", // 选填:  该用户在您系统上的主邮箱
-  name: "五月数码", // 选填: 用户名
-  signed_up: 2019821660 // 选填: 用户的注册时间，用Unix时间戳表示
-});
-daovoice('update');
-daovoice('init', {
-  app_id: "0b42e50c"
-});
-daovoice('update');
 </script>
 </body>
 </html>
