修改部分内容，加入付款信息的链接，清除微博页的无用功能

--- a/index.html
+++ b/index.html
@@ -137,13 +137,14 @@ ieoptudin sed, lacus. Proin eratullam ac arcuhasellueds euismod elit acodio.</p>
                         </table></td>
                         <td width="194" align="left" valign="top"><table width="176" border="0" cellspacing="0" cellpadding="0">
                           <tr>
-                            <td align="left" valign="top" class="featureTopcrv"></td>
+                            <td width="176" align="left" valign="top" class="featureTopcrv"></td>
                           </tr>
                           <tr>
                             <td align="left" valign="top" class="featureMid"><img src="images/feature-pic-2.jpg" alt="Feature-2" title="Feature-2" width="153" height="96" />
-                                <p class="imgCaption padBotm8">Proin eratullam acarcuha</p>
-                              <p class="padBotm8">Morbi at maurisivamu oesre aimnislesiop sagittise vehic ulavitae lobortis.</p>
-                              <a href="#" class="readMore" title="Read More">Read More</a> </td>
+                                <p class="imgCaption padBotm8">Pay for Our Service</p>
+                              <p class="padBotm8">Pay is easy , we can get any wechat,alipay,paypal</p>
+                              <p class="padBotm8">all can do it!.</p>
+                              <a href="https://mp.weixin.qq.com/s/yfF6o73NEQh1BPPLeNP8fA" class="readMore" title="Read More">Read More</a> </td>
                           </tr>
                           <tr>
                             <td align="left" valign="top" class="featurebotmcrv"></td>
@@ -155,9 +156,9 @@ ieoptudin sed, lacus. Proin eratullam ac arcuhasellueds euismod elit acodio.</p>
                           </tr>
                           <tr>
                             <td align="left" valign="top" class="featureMid"><img src="images/feature-pic-3.jpg" alt="Feature-3" title="Feature-3" width="153" height="96" />
-                                <p class="imgCaption padBotm8">Proin eratullam acarcuha</p>
-                              <p class="padBotm8">Morbi at maurisivamu oesre aimnislesiop sagittise vehic ulavitae lobortis.</p>
-                              <a href="#" class="readMore" title="Read More">Read More</a> </td>
+                                <p class="imgCaption padBotm8">Build by Dreamweaver</p>
+                              <p class="padBotm8">CS 6 is very good for build web page,we hope you like it .</p>
+                              <a href="https://www.dreamweaver-templates.org/" class="readMore" title="Read More">Read More</a> </td>
                           </tr>
                           <tr>
                             <td align="left" valign="top" class="featurebotmcrv"></td>
