小位置调整
页脚内容

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ ieoptudin sed, lacus. Proin eratullam ac arcuhasellueds euismod elit acodio.</p>
 								<img src="images/feature-pic-1.jpg" alt="Feature-1" title="Feature-1" width="153" height="96" />
 								<p class="imgCaption padBotm8">Proin eratullam acarcuha</p>
 								<p class="padBotm8">Morbi at maurisivamu oesre aimnislesiop sagittise vehic ulavitae lobortis.</p>
-								<a href="#" class="readMore" title="Read More">Read More</a>							</td>
+								<a href="pay.html" class="readMore" title="Read More">Read More</a>							</td>
                           </tr>
                           <tr>
                             <td align="left" valign="top" class="featurebotmcrv"></td>
@@ -197,7 +197,7 @@ ieoptudin sed, lacus. Proin eratullam ac arcuhasellueds euismod elit acodio.</p>
 				<li><a href="#" title="News">News</a></li>
 				<li><a href="weibo.html" title="Contact Us" class="last">Contact Us</a></li>
 			</ul>
-			<p class="copy">&copy; Copyright Information Goes Here. All Rights Reserved.</p>
+			<p class="copy">&copy; Copyright AnQing.De . All Rights Reserved.</p>
 			<p class="dsign">&nbsp;</p>
 	</td>
   </tr>
