--- a/pay.html
+++ b/pay.html
@@ -26,13 +26,19 @@
     详情请咨询在线客服    </p>
   </div>
 </div>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-99822-6"></script>
+<p>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99822-6"></script>
+</p>
+<h6>&nbsp;</h6>
+<ul class="footerLink">
+    <h6 class="btn">  Copyright <a href="index.html">AnQing</a>.De . All Rights Reserved.</h6>
+</ul>
+<p>&nbsp;</p>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-99822-6');
-</script>
-
+  </script>
 </body></html>
