--- a/weibo.html
+++ b/weibo.html
@@ -3,6 +3,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>安庆微博在线</title>
+<style type="text/css">
+.footerLink .noDivider a {
+	font-size: small;
+}
+</style>
 </head>
 
 <body>
@@ -17,6 +22,12 @@
   gtag('config', 'UA-99822-6');
 </script>
 <iframe width="100%" height="500"  frameborder="0" scrolling="no" src="https://widget.weibo.com/livestream/listlive.php?language=zh_cn&width=0&height=500&uid=1412711073&skin=1&refer=1&appkey=3267464552&pic=0&titlebar=1&border=1&publish=1&atalk=1&recomm=0&at=0&atopic=%E4%BA%94%E6%9C%88%E6%95%B0%E7%A0%81&ptopic=%E4%BA%94%E6%9C%88%E6%95%B0%E7%A0%81&dpc=1"></iframe>
-<script src="5/js/index.js"></script>
+<ul class="footerLink">
+  <li class="noDivider"><a href="index.html" title="Home">Home</a></li>
+</ul>
+<p class="copy">&copy; Copyright AnQing.De . All Rights Reserved.</p>
+<p>
+  <script src="5/js/index.js"></script>
+</p>
 </body>
 </html>
