--- a/pay.html
+++ b/pay.html
@@ -18,7 +18,7 @@
 <div style=" float:right;display:block; width:30px;margin-right:20px;"><a href="http://kdqf.xj.189.cn/LOCK.htm#"><img src="pay_files/kdtc20160303_wap_xx.png" width="30" alt=""></a></div>
 
   <h2>交费提醒</h2>
-  <p><span>尊敬的星级客户：</span> 　　您的业务因未及时缴费已暂停服务，请登录<b><a href="https://weidian.com/?userid=331787507">我公司微店</a></b>及时缴费，以免影响您的业务开展哦！</p>
+  <p><span>尊敬的星级客户：</span> 　　您的业务因未及时缴费已暂停服务，请登录<b><a href="https://weidian.com/item_classes.html?userid=331787507&amp;c=95410424&amp;spider_token=0fdb">我公司微店</a></b>及时缴费，以免影响您的业务开展哦！</p>
   <div class="btn"><a class="a1" href="https://weidian.com/item.html?itemID=2556399171" target="_blank">点击交费</a><a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=Pl9QT1dQWRBaW35YUUZTX1dSEF1RUw" style="text-decoration:none;">紧急恢复</a></div>
   
   <div class="fff">
