add link to hk_aliyun

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <td align="left" valign="top">
 					<ul class="topMenu">
 						<li><a href="index.html" title="Home" class="active">Home</a></li>
-						<li><a href="#" title="About Us">About Us</a></li>
-						<li><a href="#" title="Service">Service</a></li>
-						<li><a href="#" title="News">News</a></li>
+						<li><a href="http://i.anqing.de" title="About Us" target="_blank">About Us</a></li>
+						<li><a href="http://i.anqing.de/product/" title="Service" target="_blank">Service</a></li>
+						<li><a href="http://i.anqing.de/news/" title="News" target="_blank">News</a></li>
 						<li><a href="weibo.html" title="Contact Us" class="last">Contact Us</a></li>
 					</ul>
 				</td>
@@ -60,7 +60,7 @@
 						<p class="padBotm8">Lorem ipsum dolor sit ameteriop consectetuer adipiscined gravida augue idmagna.</p>					</td>
                   </tr>
                   <tr>
-                    <td align="left" valign="top"><img src="images/news-pic.jpg" alt="" width="184" height="94" /></td>
+                    <td align="left" valign="top"><a href="https://home.anqing.de:2017"><img src="images/news-pic.jpg" alt="" width="184" height="94" /></a></td>
                   </tr>
                   <tr>
                     <td align="left" valign="top">
