--- a/404.html
+++ b/404.html
@@ -6,6 +6,18 @@
 </head>
 
 <body>
-welcome to anqing.de!
+<p>welcome to anqing.de! </p>
+<p>this page is move. </p>
+<p>hope to telle me:<a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=Pl9QT1dQWRBaW35YUUZTX1dSEF1RUw" style="text-decoration:none;"><img src="http://rescdn.qqmail.com/zh_CN/htmledition/images/function/qm_open/ico_mailme_12.png"/></a></p>
+
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-99822-6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-99822-6');
+</script>
 </body>
 </html>
