--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Welcome to AnQing Business</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
+<script data-ad-client="ca-pub-2979942301121124" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
