--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Welcome to AnQing Business</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <script data-ad-client="ca-pub-2979942301121124" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -26,11 +26,11 @@
               <tr>
                 <td align="left" valign="top">
 					<ul class="topMenu">
-						<li><a href="index.html" title="Home" class="active">Home</a></li>
+						<li><a href="2001" title="Home" class="active">Home</a></li>
 						<li><a href="http://i.anqing.de" title="About Us" target="_blank">About Us</a></li>
 						<li><a href="http://i.anqing.de/product/" title="Service" target="_blank">Service</a></li>
 						<li><a href="http://i.anqing.de/news/" title="News" target="_blank">News</a></li>
-						<li><a href="weibo.html" title="Contact Us" class="last">Contact Us</a></li>
+						<li><a href="https://github.com/jarodlee" title="Contact Us" class="last">Contact Us</a></li>
 					</ul>
 				</td>
               </tr>
