--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <tr>
                 <td align="left" valign="top">
 					<ul class="topMenu">
-						<li><a href="2001" title="Home" class="active">Home</a></li>
+						<li><a href="pub/" title="Home" class="active">Home</a></li>
 						<li><a href="http://i.anqing.de" title="About Us" target="_blank">About Us</a></li>
 						<li><a href="http://i.anqing.de/product/" title="Service" target="_blank">Service</a></li>
 						<li><a href="http://i.anqing.de/news/" title="News" target="_blank">News</a></li>
