--- a/pub/index.html
+++ b/pub/index.html
@@ -24,7 +24,8 @@
 <a href="zuoci.htm">
 <p>人生座次</p>
 </a>
-<p>&nbsp;</p>
+<p>很久以前下载的一个<a href="centospub/index.htm">centospub教程网站</a></p>
+<p>当时还不知道linux的强大，本来只要用wget命令就能解决的东西，硬是找了一个软件解决。</p>
 <p>&nbsp;</p>
 </body>
 </html>
