迁移一些资料
故事板与音乐单独存放，2000年的软件安装包打包到一个zip分卷中，github不允许上传单个文件超过100m的，有专用的gitlfs

--- a/pub/index.html
+++ b/pub/index.html
@@ -26,6 +26,12 @@
 </a>
 <p>很久以前下载的一个<a href="centospub/index.htm">centospub教程网站</a></p>
 <p>当时还不知道linux的强大，本来只要用wget命令就能解决的东西，硬是找了一个软件解决。</p>
-<p>&nbsp;</p>
+<p>2、整理后才发现director光盘中附带着当时 很有名的一些软件安装 工具。</p>
+<p>Acrobat/   Cleaner/   Dynamic/    Flash/     PaintShp/   Strata3d/<br>
+  Aladdin/   Director/  Factory/    Homesite/  Qktime/     WinZip/<br>
+AutoPlay/  Dweaver3/   Fireworks/  Medialab/  SmartDraw/</p>
+<p>当时可是2000年呀！</p>
+<p><br>
+</p>
 </body>
 </html>
