--- a/pub/index.html
+++ b/pub/index.html
@@ -30,7 +30,8 @@
 <p>Acrobat/   Cleaner/   Dynamic/    Flash/     PaintShp/   Strata3d/<br>
   Aladdin/   Director/  Factory/    Homesite/  Qktime/     WinZip/<br>
 AutoPlay/  Dweaver3/   Fireworks/  Medialab/  SmartDraw/</p>
-<p>当时可是2000年呀！</p>
+<p>当时可是2000年呀！由于github page的限制，这些软件就分卷打包了：<a href="director8_cd/Goodies.zip.001">分卷1</a>、<a href="director8_cd/Goodies.zip.002">分卷2</a>、<a href="director8_cd/Goodies.zip.003">分卷3</a>。</p>
+<p>光盘中还有很多好玩的东西，我都没怎么用过：<a href="director8_cd/Storyboards/STYBD2UP.PDF">故事板PDF（2页版）</a>、<a href="director8_cd/Storyboards/STYBD4UP.PDF">4页版</a>、<a href="director8_cd/ArtBeats/Read Me.html">ArtBeats</a>、<a href="director8_cd/CoolButtons/ReadMe.txt">CoolButtun</a>、</p>
 <p><br>
 </p>
 </body>
