--- a/pub/centospub/index.html
+++ b/pub/centospub/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-		<meta name="description" content="CentOS·þÎñÆ÷¹¹½¨">
-		<meta name="keywords" content="Centos, ·þÎñÆ÷¹¹½¨, Server, ·þÎñÆ÷, Enterprise, Linux, news, software, download, downloads, free, community, forums, bulletin, boards, open, source, opensource, gpl, UNIX, web site, weblog, blogs, ISO, FAQ, whitebox, WBEL, WBL, taolinux" />
-	<title>CentOS Pub  --- ´¿ÖÐÎÄ CentOS ¹¥ÂÔÕ¾</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="description" content="CentOSæœåŠ¡å™¨æž„å»º">
+		<meta name="keywords" content="Centos, æœåŠ¡å™¨æž„å»º, Server, æœåŠ¡å™¨, Enterprise, Linux, news, software, download, downloads, free, community, forums, bulletin, boards, open, source, opensource, gpl, UNIX, web site, weblog, blogs, ISO, FAQ, whitebox, WBEL, WBL, taolinux" />
+	<title>CentOS Pub  --- çº¯ä¸­æ–‡ CentOS æ”»ç•¥ç«™</title>
 	<style type="text/css">
 <!--
 .STYLE1 {color: #999999}
@@ -22,27 +22,27 @@
 				<tr>
 					<td>
 					</td>
-					<td class="current-tab-label"><a href="index.html" tppabs="http://www.centospub.com/index.html">Ç°¡¡ÑÔ</a></td>
+					<td class="current-tab-label"><a href="index.html" tppabs="http://www.centospub.com/index.html">å‰ã€€è¨€</a></td>
 					<td class="current-tab-end"></td>
 
 					<td class="tab-spacer"></td>
 
-					<td class="tab-label"><a href="prep.html" tppabs="http://www.centospub.com/prep.html">Ô¤¡¡Ï°</a></td>
+					<td class="tab-label"><a href="prep.html" tppabs="http://www.centospub.com/prep.html">é¢„ã€€ä¹ </a></td>
 					<td class="tab-end"></td>
 
 					<td class="tab-spacer"></td>
 
-					<td class="tab-label"><a href="make.html" tppabs="http://www.centospub.com/make.html">ÅäÖÃÏê½â</a></td> 
+					<td class="tab-label"><a href="make.html" tppabs="http://www.centospub.com/make.html">é…ç½®è¯¦è§£</a></td> 
 					<td class="tab-end"></td>
 
 					<td class="tab-spacer"></td>
 
-					<td class="tab-label"><a href="index-1.htm" tppabs="http://www.centospub.com/bbs" target="_blank">¼¼ÊõÂÛÌ³</a></td> 
+					<td class="tab-label"><a href="index-1.htm" tppabs="http://www.centospub.com/bbs" target="_blank">æŠ€æœ¯è®ºå›</a></td> 
 					<td class="tab-end"></td>
 
 					<td class="tab-spacer"></td>
 
-					<td class="tab-label"><a href="whatsnew.html" tppabs="http://www.centospub.com/whatsnew.html">×î½ü¸üÐÂ</a></td> 
+					<td class="tab-label"><a href="whatsnew.html" tppabs="http://www.centospub.com/whatsnew.html">æœ€è¿‘æ›´æ–°</a></td> 
 					<td class="tab-end"></td>
 
 					<td class="tab-spacer"></td>
@@ -60,32 +60,32 @@
 		</div>
 
 		<div id="docs-content"><br />
-		  ¡¡¡¡·þÎñÆ÷ºÍ¸öÈËµçÄÔ×î±¾ÖÊµÄÇø±ðÎÞ·Ç·þÎñÆ÷ÊÇÎªÁËÌá¹©·þÎñ¶ø´æÔÚ¡£È»¶ø£¬Í¨¹ýÒ»Ð©Èí¼þÒ²¿ÉÒÔ°ÑÎÒÃÇµÄÊ¹ÓÃÖÐµÄ¸öÈËµçÄÔÄ£Äâ³ÉÒ»Ì¨£¨Web£©·þÎñÆ÷£¬±ÈÈç Win98 ÏÂÓÃ PWS £¬ Win2K ÏÂÓÃ IIS £¬»òÕßÔÚ Windows ÏÂ°²×° Win32 °æµÄ Apache µÈµÈ¡£µ«ÊÇ£¬ÕâÐ©·½Ê½Ò²Ê¹µÃÒ»·½Ãæ·þÎñÆ÷µÄ¿É¶¨ÖÆÐÔ±äµÃºÜ²î£¬ÁíÒ»·½Ãæ£¬Ê¹·þÎñÆ÷ÔÚ³ÐÔØ·þÎñ¸ºµ£µÄÍ¬Ê±£¬Ê±Ê±¿Ì¿Ì¶¼ÓÐÊÜµ½ÓÉÓÚ Windows ²Ù×÷ÏµÍ³±¾ÉíÔÚ·þÎñÆ÷·½ÃæµÄ´àÈõÐÔ¶øÔâÊÜ¹¥»÷£¬µ¼ÖÂ±ÀÀ£µÄ¿ÉÄÜÐÔ¡£<br />
+		  ã€€ã€€æœåŠ¡å™¨å’Œä¸ªäººç”µè„‘æœ€æœ¬è´¨çš„åŒºåˆ«æ— éžæœåŠ¡å™¨æ˜¯ä¸ºäº†æä¾›æœåŠ¡è€Œå­˜åœ¨ã€‚ç„¶è€Œï¼Œé€šè¿‡ä¸€äº›è½¯ä»¶ä¹Ÿå¯ä»¥æŠŠæˆ‘ä»¬çš„ä½¿ç”¨ä¸­çš„ä¸ªäººç”µè„‘æ¨¡æ‹Ÿæˆä¸€å°ï¼ˆWebï¼‰æœåŠ¡å™¨ï¼Œæ¯”å¦‚ Win98 ä¸‹ç”¨ PWS ï¼Œ Win2K ä¸‹ç”¨ IIS ï¼Œæˆ–è€…åœ¨ Windows ä¸‹å®‰è£… Win32 ç‰ˆçš„ Apache ç­‰ç­‰ã€‚ä½†æ˜¯ï¼Œè¿™äº›æ–¹å¼ä¹Ÿä½¿å¾—ä¸€æ–¹é¢æœåŠ¡å™¨çš„å¯å®šåˆ¶æ€§å˜å¾—å¾ˆå·®ï¼Œå¦ä¸€æ–¹é¢ï¼Œä½¿æœåŠ¡å™¨åœ¨æ‰¿è½½æœåŠ¡è´Ÿæ‹…çš„åŒæ—¶ï¼Œæ—¶æ—¶åˆ»åˆ»éƒ½æœ‰å—åˆ°ç”±äºŽ Windows æ“ä½œç³»ç»Ÿæœ¬èº«åœ¨æœåŠ¡å™¨æ–¹é¢çš„è„†å¼±æ€§è€Œé­å—æ”»å‡»ï¼Œå¯¼è‡´å´©æºƒçš„å¯èƒ½æ€§ã€‚<br />
           <br />
-¡¡¡¡ËùÒÔ£¬ÔÚÕâÀïÎÒÃÇÓÃLinuxÕâ¸ö·þÎñÆ÷×¨ÓÃ²Ù×÷ÏµÍ³À´´î½¨Ò»Ì¨°²È«¡¢ÎÈ¶¨¡¢¿É¶¨ÖÆÐÔÇ¿µÄ·þÎñÆ÷£¬À´Âú×ãÎÒÃÇ·¢²¼ÍøÒ³¡¢ÒÔ¼°¼ÜÉèÂÛÌ³µÈµÈ¶à¹¦ÄÜ½»»¥³ÌÐòµÄÐèÒª¡£<br />
+ã€€ã€€æ‰€ä»¥ï¼Œåœ¨è¿™é‡Œæˆ‘ä»¬ç”¨Linuxè¿™ä¸ªæœåŠ¡å™¨ä¸“ç”¨æ“ä½œç³»ç»Ÿæ¥æ­å»ºä¸€å°å®‰å…¨ã€ç¨³å®šã€å¯å®šåˆ¶æ€§å¼ºçš„æœåŠ¡å™¨ï¼Œæ¥æ»¡è¶³æˆ‘ä»¬å‘å¸ƒç½‘é¡µã€ä»¥åŠæž¶è®¾è®ºå›ç­‰ç­‰å¤šåŠŸèƒ½äº¤äº’ç¨‹åºçš„éœ€è¦ã€‚<br />
 <br />
-¡¡¡¡LinuxµÄ·¢ÐÐ°æÒ²ÓÐÊý¶àÖÖ£¬ÔÚÕâÀï£¬ÎÒÃÇ²ÉÓÃ CentOS Õâ¸ö Linux ·¢ÐÐ°æ¡£CentOS ÊÇ RHEL£¨Red Hat  Enterprise  Linux£©Ô´´úÂëÔÙ±àÒëµÄ²úÎï£¬¶øÇÒÔÚ RHEL µÄ»ù´¡ÉÏÐÞÕýÁË²»ÉÙÒÑÖªµÄ Bug £¬Ïà¶ÔÓÚÆäËû Linux ·¢ÐÐ°æ£¬ÆäÎÈ¶¨ÐÔÖµµÃÐÅÀµ¡£ÁíÍâ£¬ÓÉÓÚ  Fedora Core ¼Æ»®Ò²¹é¸ùÓÚ Red Hat Ïµ£¬ËùÒÔÔÚ¾ø´ó¶àÊýÇé¿öÏÂ£¬Ê¹ÓÃ Fedora  Core µÄÅóÓÑ£¬Ò²Í¬ÑùÄÜ¹»Í¨¹ý±¾Õ¾½éÉÜµÄ¸÷ÖÖ CentOS ·½ÃæÏà¹ØµÄ¼¼ÇÉ¡¢·½·¨À´Íê³É·þÎñÆ÷µÄ¹¹½¨ºÍÎ¬»¤¹¤×÷¡£µ«Ïà¶ÔÓÚÎÈ¶¨ÐÔÀ´Ëµ£¬Fedora Core ¸ü²àÖØÓÚ×îÐÂ¼¼Êõ£¬¸üÃæÏòÓÚ×ÀÃæÓ¦ÓÃÒÔ¼°¿ª·¢²âÊÔ£¬ÕâÒ²µ¼ÖÂ Fedora Core µÄÎÈ¶¨ÐÔ±»¿¼ÂÇÔÚÁË´ÎÒªµÄ·½Ãæ¡£ËùÒÔÔÚÕâÀï£¬²»½¨ÒéÊ¹ÓÃ Fedora Core À´¹¹½¨ÍøÂç·þÎñÆ÷¡£
+ã€€ã€€Linuxçš„å‘è¡Œç‰ˆä¹Ÿæœ‰æ•°å¤šç§ï¼Œåœ¨è¿™é‡Œï¼Œæˆ‘ä»¬é‡‡ç”¨ CentOS è¿™ä¸ª Linux å‘è¡Œç‰ˆã€‚CentOS æ˜¯ RHELï¼ˆRed Hat  Enterprise  Linuxï¼‰æºä»£ç å†ç¼–è¯‘çš„äº§ç‰©ï¼Œè€Œä¸”åœ¨ RHEL çš„åŸºç¡€ä¸Šä¿®æ­£äº†ä¸å°‘å·²çŸ¥çš„ Bug ï¼Œç›¸å¯¹äºŽå…¶ä»– Linux å‘è¡Œç‰ˆï¼Œå…¶ç¨³å®šæ€§å€¼å¾—ä¿¡èµ–ã€‚å¦å¤–ï¼Œç”±äºŽ  Fedora Core è®¡åˆ’ä¹Ÿå½’æ ¹äºŽ Red Hat ç³»ï¼Œæ‰€ä»¥åœ¨ç»å¤§å¤šæ•°æƒ…å†µä¸‹ï¼Œä½¿ç”¨ Fedora  Core çš„æœ‹å‹ï¼Œä¹ŸåŒæ ·èƒ½å¤Ÿé€šè¿‡æœ¬ç«™ä»‹ç»çš„å„ç§ CentOS æ–¹é¢ç›¸å…³çš„æŠ€å·§ã€æ–¹æ³•æ¥å®ŒæˆæœåŠ¡å™¨çš„æž„å»ºå’Œç»´æŠ¤å·¥ä½œã€‚ä½†ç›¸å¯¹äºŽç¨³å®šæ€§æ¥è¯´ï¼ŒFedora Core æ›´ä¾§é‡äºŽæœ€æ–°æŠ€æœ¯ï¼Œæ›´é¢å‘äºŽæ¡Œé¢åº”ç”¨ä»¥åŠå¼€å‘æµ‹è¯•ï¼Œè¿™ä¹Ÿå¯¼è‡´ Fedora Core çš„ç¨³å®šæ€§è¢«è€ƒè™‘åœ¨äº†æ¬¡è¦çš„æ–¹é¢ã€‚æ‰€ä»¥åœ¨è¿™é‡Œï¼Œä¸å»ºè®®ä½¿ç”¨ Fedora Core æ¥æž„å»ºç½‘ç»œæœåŠ¡å™¨ã€‚
 <p><strong><br />
-  [Ä¿¡¡¡¡±ê]</strong><br />
+  [ç›®ã€€ã€€æ ‡]</strong><br />
   <br />
-  ¡¡¡¡* ¶Ô·þÎñÆ÷ÍêÈ«×ÔÖ÷¡¢×ÔÓÉµÄÅäÖÃ<br />
-  ¡¡¡¡* ÊµÏÖ Web ·¢²¼¡¢²¢Í¨¹ýÐéÄâÖ÷»úÊµÏÖ¶àÓÃ»§¹²Ïí Web ·þÎñÆ÷×ÊÔ´<br />
-  ¡¡¡¡* ¶Ô Perl¡¢PHP¡¢JSPµÄÖ§³Ö£¬ÒÔ¼° MySQL Êý¾Ý¿âµÄÖ§³Ö<br />
-  ¡¡¡¡* Í¨¹ý FTP ·þÎñÆ÷µÄ¹¹½¨ÊµÏÖÔ¶³ÌÎÄ¼þ´«ËÍ<br />
-   ¡¡¡¡* Í¨¹ý SSH Ô¶³Ì¿ØÖÆ·þÎñÆ÷<br />
-  ¡¡¡¡* ×ÔÖ÷ E-mail ·þÎñÆ÷µÄ¹¹½¨<br />
-  ¡¡¡¡* ·þÎñÆ÷¶Ë²¡¶¾¼à²âÒÔ¼°°²È«¼à²âµÄÏµÍ³»¯<br />
-  ¡¡¡¡* ¡£¡£¡£¡£¡£¡£<br />
+  ã€€ã€€* å¯¹æœåŠ¡å™¨å®Œå…¨è‡ªä¸»ã€è‡ªç”±çš„é…ç½®<br />
+  ã€€ã€€* å®žçŽ° Web å‘å¸ƒã€å¹¶é€šè¿‡è™šæ‹Ÿä¸»æœºå®žçŽ°å¤šç”¨æˆ·å…±äº« Web æœåŠ¡å™¨èµ„æº<br />
+  ã€€ã€€* å¯¹ Perlã€PHPã€JSPçš„æ”¯æŒï¼Œä»¥åŠ MySQL æ•°æ®åº“çš„æ”¯æŒ<br />
+  ã€€ã€€* é€šè¿‡ FTP æœåŠ¡å™¨çš„æž„å»ºå®žçŽ°è¿œç¨‹æ–‡ä»¶ä¼ é€<br />
+   ã€€ã€€* é€šè¿‡ SSH è¿œç¨‹æŽ§åˆ¶æœåŠ¡å™¨<br />
+  ã€€ã€€* è‡ªä¸» E-mail æœåŠ¡å™¨çš„æž„å»º<br />
+  ã€€ã€€* æœåŠ¡å™¨ç«¯ç—…æ¯’ç›‘æµ‹ä»¥åŠå®‰å…¨ç›‘æµ‹çš„ç³»ç»ŸåŒ–<br />
+  ã€€ã€€* ã€‚ã€‚ã€‚ã€‚ã€‚ã€‚<br />
   <br />
   <br />
-  <strong>[»ù±¾Ìõ¼þ]</strong><br />
+  <strong>[åŸºæœ¬æ¡ä»¶]</strong><br />
   <br />
-  ¡¡¡¡* Ò»Ì¨ÅäÖÃËµµÄ¹ýÈ¥µÄ¼ÆËã»ú£¨¼«Á¦ÍÆ¼öÊ¹ÓÃ×ÔÓÃ PC ÒÔÍâµÄÁíÒ»Ì¨¼ÆËã»ú£©<br />
-  ¡¡¡¡* 7*24 È«ÌìºòµÄÍøÂç½ÓÈë£¨PPPoE»òÆäËûÄÜ¹»»ñµÃ¶ÀÁ¢ Global IP µØÖ·µÄ½ÓÈë·½Ê½¼´¿É£©<br />
-  ¡¡¡¡* ×ÔÓÃ PC Óë½«Òª¹¹½¨µÄ·þÎñÆ÷×é³ÉµÄ¾ÖÓòÍø»·¾³£¨·þÎñÆ÷¶ËµÄÅäÖÃ¿ÉÍ¨¹ý×ÔÓÃPCÀ´²Ù×÷£©<br />
-  ¡¡¡¡* ¡£¡£¡£¡£¡£¡£<br />
-  ¡¡¡¡* Èç¹ûÎÞÒÔÉÏÌõ¼þ£¬Ò²¿ÉÒÔÍ¨¹ý VMWare ÔÚ Windows ÏÂ¹¹½¨<br />
-  ¡¡¡¡<span class="STYLE1">£¨»ùÓÚ Windows µÄ VMWare Ëù¹¹½¨µÄ CentOS ·þÎñÆ÷ÎÞ¶à´óµÄÓ¦ÓÃÒâÒå£¬½öÏÞÓÚÑ§Ï°ÓÃ£©</span></p>
+  ã€€ã€€* ä¸€å°é…ç½®è¯´çš„è¿‡åŽ»çš„è®¡ç®—æœºï¼ˆæžåŠ›æŽ¨èä½¿ç”¨è‡ªç”¨ PC ä»¥å¤–çš„å¦ä¸€å°è®¡ç®—æœºï¼‰<br />
+  ã€€ã€€* 7*24 å…¨å¤©å€™çš„ç½‘ç»œæŽ¥å…¥ï¼ˆPPPoEæˆ–å…¶ä»–èƒ½å¤ŸèŽ·å¾—ç‹¬ç«‹ Global IP åœ°å€çš„æŽ¥å…¥æ–¹å¼å³å¯ï¼‰<br />
+  ã€€ã€€* è‡ªç”¨ PC ä¸Žå°†è¦æž„å»ºçš„æœåŠ¡å™¨ç»„æˆçš„å±€åŸŸç½‘çŽ¯å¢ƒï¼ˆæœåŠ¡å™¨ç«¯çš„é…ç½®å¯é€šè¿‡è‡ªç”¨PCæ¥æ“ä½œï¼‰<br />
+  ã€€ã€€* ã€‚ã€‚ã€‚ã€‚ã€‚ã€‚<br />
+  ã€€ã€€* å¦‚æžœæ— ä»¥ä¸Šæ¡ä»¶ï¼Œä¹Ÿå¯ä»¥é€šè¿‡ VMWare åœ¨ Windows ä¸‹æž„å»º<br />
+  ã€€ã€€<span class="STYLE1">ï¼ˆåŸºäºŽ Windows çš„ VMWare æ‰€æž„å»ºçš„ CentOS æœåŠ¡å™¨æ— å¤šå¤§çš„åº”ç”¨æ„ä¹‰ï¼Œä»…é™äºŽå­¦ä¹ ç”¨ï¼‰</span></p>
 		  <p>&nbsp;</p>
 
        <hr>
