--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <td align="left" valign="top">
 					<ul class="topMenu">
 						<li><a href="pub/" title="Home" class="active">Home</a></li>
-						<li><a href="http://i.anqing.de" title="About Us" target="_blank">About Us</a></li>
-						<li><a href="http://i.anqing.de/product/" title="Service" target="_blank">Service</a></li>
-						<li><a href="http://i.anqing.de/news/" title="News" target="_blank">News</a></li>
+						<li><a href="http://lxj.ghtxx.cn:88/shower/index.php/1/" title="About Us" target="_blank">About Us</a></li>
+						<li><a href="http://lxj.ghtxx.cn:88/shower/index.php/action-image" title="Service" target="_blank">Service</a></li>
+						<li><a href="http://lxj.ghtxx.cn:88/shower/index.php/action-news" title="News" target="_blank">News</a></li>
 						<li><a href="https://github.com/jarodlee" title="Contact Us" class="last">Contact Us</a></li>
 					</ul>
 				</td>
