--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<ul class="topMenu">
 						<li><a href="pub/" title="Home" class="active">Home</a></li>
 						<li><a href="http://lxj.ghtxx.cn:88/shower/index.php/1/" title="About Us" target="_blank">About Us</a></li>
-						<li><a href="http://lxj.ghtxx.cn:88/shower/index.php/action-image" title="Service" target="_blank">Service</a></li>
+						<li><a href="pub/index.html" title="Service" target="_blank">Service</a></li>
 						<li><a href="http://lxj.ghtxx.cn:88/shower/index.php/action-news" title="News" target="_blank">News</a></li>
 						<li><a href="https://github.com/jarodlee" title="Contact Us" class="last">Contact Us</a></li>
 					</ul>
@@ -117,7 +117,7 @@ elobortis griavida, dolor. Aliquaiim mauris dudictuma.</p>
 						<p>Nunc vulputate accumsan metus. Mauris eu neque eu ligula aliquet ultrices. Morbi at mauris. Viu loream
  nislesiop  sagittis eu, vehicula vitae, lobortis gravida, dolor. Aliquam mauris dui, dictum a, aliquam eues
 ieoptudin sed, lacus. Proin eratullam ac arcuhasellueds euismod elit acodio.</p>
-						<a href="#" class="more" title="Read More">Read More</a>					</td>
+						<a href="2002/index.html" class="more" title="Read More">Read More</a>					</td>
                   </tr>
                   <tr>
                     <td align="left" valign="top" class="padTop30"><table width="100%" border="0" cellspacing="0" cellpadding="0">
